src/test/ui/issues/issue-65634-raw-ident-suggestion.stderr
error[E0034]: multiple applicable items in scope
  --> $DIR/issue-65634-raw-ident-suggestion.rs:21:13
   |
LL |     r#fn {}.r#struct();
   |             ^^^^^^^^ multiple `r#struct` found
   |
note: candidates defined here:
  --> $DIR/issue-65634-raw-ident-suggestion.rs:4:5
   |
LL |     fn r#struct(&self) {
   |     ^^^^^^^^^^^^^^^^^^ candidate #1 is defined in an impl of the trait `async` for the type `r#fn`
...
LL |     fn r#struct(&self) {
   |     ^^^^^^^^^^^^^^^^^^ candidate #2 is defined in an impl of the trait `await` for the type `r#fn`
help: disambiguate the method call for candidate #1
   |
LL |     async::r#struct(&r#fn {});
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
help: disambiguate the method call for candidate #2
   |
LL |     await::r#struct(&r#fn {});
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0034`.
